<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".FirstFragment"
    tools:layout_editor_absoluteX="33dp">

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/amountText"
        android:textColor="@color/titleText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/amountValueText"
        android:textColor="@color/titleText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--在ComponentTree對元件點右鍵 -> Extract Style，可以將通用的Style 分解出來，做到類似CSS的效果-->
    <!--style 的設定存在res/values/styles.xml-->
    <Button
        android:id="@+id/greenTeaButton"
        style="@style/ButtonStyle"
        android:text="@string/greenTea" />

    <Button
        android:id="@+id/blackTeaButton"
        style="@style/ButtonStyle"
        android:text="@string/blackTea" />

    <Button
        android:id="@+id/ooLongTeaButton"
        style="@style/ButtonStyle"
        android:text="@string/ooLongTea" />

    <Button
        android:id="@+id/milkTeaButton"
        style="@style/ButtonStyle"
        android:text="@string/milkTea" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/greenTea"
        android:src="@android:drawable/btn_star_big_on" />

</LinearLayout>